--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -67,7 +67,7 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin
           git checkout develop
           mkdir data
-          cp portaldata data
+          cp -fR portaldata data
           git add logs
           git pull origin
           git commit -m "Added Logs to branch"
