--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -55,9 +55,8 @@ jobs:
         app-id: ${{ secrets.dev_client_id }}
         client-secret: ${{ secrets.dev_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        download-path: ${{ secrets.dev_url }}
+        download-path: portaldata
         website-id: '5001a9ef-2555-ed11-bba2-000d3a34c578'
-        working-directory: portaldata
         
     - name: push portal data to branch
       run: |
