--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -67,10 +67,8 @@ jobs:
           git fetch
           git status
           git add portaldata
-          git stash
           git checkout develop
-          git stash pop
-          git add portaldata
+          git status
           git commit -m "Added portaldata to branch"
           git push
       env:
