--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -66,9 +66,10 @@ jobs:
           git config user.email "<>"
           git fetch
           git status
-          git add portaldata
+          git stash --untracked
           git checkout develop
-          git status
+          git stash pop
+          git add portaldata
           git commit -m "Added portaldata to branch"
           git push
       env:
