--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -66,11 +66,11 @@ jobs:
           git config user.email "<>"
           git fetch
           git status
-          git add portaldata/
+          git add 
           git stash 
           git checkout develop
           git stash pop
-          git add portaldata/
+          git add portaldata
           git commit -m "Added portaldata to branch"
           git push
       env:
