--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -66,7 +66,7 @@ jobs:
           git config user.email "<>"
           git fetch
           git status
-          git add 
+          git add .
           git stash 
           git checkout develop
           git stash pop
