--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -36,6 +36,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         lfs: true
+        ref: develop
         
     - name: download-paportal
       uses: microsoft/powerplatform-actions/download-paportal@v0
@@ -53,17 +54,10 @@ jobs:
           git --version
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-          git fetch --no-tags --prune --depth=1 origin
-          git checkout develop
-<<<<<<< Updated upstream
+          git status
+          git pull origin
           git add portaldata
-          git pull origin
-          git commit -m "Added Logs to branch"
-=======
-          git pull origin
-          git stash pop
           git commit -m "Added portaldata to branch"
->>>>>>> Stashed changes
           git push
       env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
