--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -47,6 +47,7 @@ jobs:
         tenant-id: ${{ secrets.tenant_id }}
         download-path: portaldata
         website-id: '5001a9ef-2555-ed11-bba2-000d3a34c578'
+        overwrite: true
         
     - name: push portal data to branch
       run: |
