--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -76,7 +76,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        lfs: true        
+        lfs: true
+        ref: develop
+        
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
       with:
