--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -67,17 +67,17 @@ jobs:
       run: ls -R
         
 
-  # upload-portal-data-to-build-env:
-  #   needs: [ download-portal-data-from-dev-env ]
-  #   runs-on:  ubuntu-latest
-  #   environment: build
-  #   env:
-  #     RUNNER_DEBUG: 1
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     with:
-  #       lfs: true
-  #       ref: develop
+  upload-portal-data-to-build-env:
+    needs: [ download-portal-data-from-dev-env ]
+    runs-on:  ubuntu-latest
+    environment: build
+    env:
+      RUNNER_DEBUG: 1
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        lfs: true
+        ref: develop
         
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
@@ -86,4 +86,4 @@ jobs:
         app-id: ${{ secrets.build_client_id }}
         client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        upload-path: portaldata
+        upload-path: portaldata/eql-trial-portal---acntrialportal
