--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -78,7 +78,15 @@ jobs:
       with:
         lfs: true
         ref: develop
-        
+  
+    - name: push portal data to branch
+      run: |
+          ls -d */
+          
+      env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
       with:
