--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -54,8 +54,8 @@ jobs:
     # needs: [ build, release-to-build-env ]
     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml@abai
     with:
-      solution_name: portalsolution
-      solution_target_folder: solutions/
+      # solution_name: portalsolution
+      # solution_target_folder: solutions/
     secrets:
       dev_url: ${{ secrets.dev_url }}
       dev_client_id: ${{ secrets.dev_client_id }}
