--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -68,6 +68,7 @@ jobs:
         
 
   upload-portal-data-to-build-env:
+    needs: [ download-portal-data-from-dev-env ]
     runs-on:  ubuntu-latest
     environment: build
     env:
