--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
@@ -50,6 +50,7 @@ jobs:
         
 
   upload-portal-data-to-sit-env:
+    needs: [ download-portal-data-from-build-env ]
     runs-on:  ubuntu-latest
     environment: sit
     env:
