--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
@@ -44,11 +44,16 @@ jobs:
         app-id: ${{ secrets.build_client_id }}
         client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        download-path: ${{ secrets.build_url }}
-        website-id: 'dd7f978e-c24e-ed11-bba1-000d3a35cd77'
-        working-directory: CMX-Pipeline/eql_cmx_portal_cicd_repository_/develop
-        
+        download-path: portaldata
+        website-id: '5001a9ef-2555-ed11-bba2-000d3a34c578'
+        overwrite: true
 
+    - name: Upload the ready to ship portal-data to GH artifact store
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-portaldata
+        path: portaldata/eql-trial-portal---acntrialportal
+        
   upload-portal-data-to-sit-env:
     needs: [ download-portal-data-from-build-env ]
     runs-on:  ubuntu-latest
@@ -66,5 +71,4 @@ jobs:
         app-id: ${{ secrets.sit_client_id }}
         client-secret: ${{ secrets.sit_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        download-path: ${{ secrets.sit_url }}
-        
+        upload-path: portaldata/eql-trial-portal---acntrialportal        
