--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Fetch the ready to ship solution from GH artifact store
       uses: actions/download-artifact@v2
       with:
-        name: managedSolutions
+        name: ${{ inputs_solution_name }}
         path: ${{ inputs.solution_release_folder}}
         
     - name: Import solution to sit env
