--- a/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_uat_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_uat_env.yml
@@ -22,7 +22,7 @@ jobs:
         
   upload-portal-data-to-uat-env:
     runs-on:  ubuntu-latest
-    environment: sit
+    environment: uat
     env:
       RUNNER_DEBUG: 1
     steps:
