changes for upload portal data

--- a/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_prod_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_prod_env.yml
@@ -35,7 +35,6 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: build-portaldata
-        path: portaldata/eql-trial-portal---acntrialportal
     
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
@@ -44,4 +43,4 @@ jobs:
         app-id: ${{ secrets.prod_client_id }}
         client-secret: ${{ secrets.prod_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        upload-path: portaldata/eql-trial-portal---acntrialportal     
+        upload-path: build-portaldata   
