--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml
@@ -79,10 +79,9 @@ jobs:
         lfs: true
         ref: develop
   
-    - name: push portal data to branch
+    - name: Display List of Directories
       run: |
           ls -d */
-          
       env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
