--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
@@ -63,7 +63,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        lfs: true        
+        lfs: true      
+
+    - name: Fetch the ready to ship solution from GH artifact store
+      uses: actions/download-artifact@v2
+      with:
+        name: build-portaldata
+
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
       with:
@@ -71,4 +77,4 @@ jobs:
         app-id: ${{ secrets.sit_client_id }}
         client-secret: ${{ secrets.sit_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        upload-path: portaldata/eql-trial-portal---acntrialportal        
+        upload-path: build-portaldata      
