--- a/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_uat_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_uat_env.yml
@@ -34,7 +34,6 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: build-portaldata
-        path: portaldata/eql-trial-portal---acntrialportal
     
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
@@ -43,4 +42,4 @@ jobs:
         app-id: ${{ secrets.uat_client_id }}
         client-secret: ${{ secrets.uat_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        upload-path: portaldata/eql-trial-portal---acntrialportal     
+        upload-path: build-portaldata
