--- a/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml
@@ -70,6 +70,12 @@ jobs:
       with:
         name: build-portaldata
 
+    - name: Display List of Directories
+      run: |
+          ls -d */
+      env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          
     - name: upload-paportal
       uses: microsoft/powerplatform-actions/upload-paportal@v0
       with:
