changes for upload portal data

--- a/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_main_pipeline.yml
@@ -10,74 +10,74 @@ on:
   
 
 jobs:
-  # build:
-  #   strategy:
-  #     max-parallel: 1
-  #     matrix:
-  #       target: [EQL20Customizing]
-  #   uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml@master
-  #   with:      
-  #     solution_name: ${{ matrix.target }}
-  #     branch_name: solution
-  #     solution_exported_folder: out/exported/
-  #     solution_folder: out/solutions/
-  #     solution_target_folder: solutions/
-  #   secrets: 
-  #     dev_url: ${{ secrets.dev_url }}
-  #     dev_client_id: ${{ secrets.dev_client_id }}
-  #     tenant_id: ${{ secrets.tenant_id }}  
-  #     dev_secrets_id: ${{ secrets.dev_secrets_id }}
+  build:
+    strategy:
+      max-parallel: 1
+      matrix:
+        target: [EQL20Customizing]
+    uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml@master
+    with:      
+      solution_name: ${{ matrix.target }}
+      branch_name: solution
+      solution_exported_folder: out/exported/
+      solution_folder: out/solutions/
+      solution_target_folder: solutions/
+    secrets: 
+      dev_url: ${{ secrets.dev_url }}
+      dev_client_id: ${{ secrets.dev_client_id }}
+      tenant_id: ${{ secrets.tenant_id }}  
+      dev_secrets_id: ${{ secrets.dev_secrets_id }}
           
-  # release-to-build-env:
-  #   strategy:
-  #       max-parallel: 1
-  #       matrix:
-  #         target: [EQL20Customizing]
-  #   needs: [ build ]
-  #   uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml@master
-  #   with:
-  #     solution_name: ${{ matrix.target }}
-  #     branch_name: solution
-  #     solution_shipping_folder: out/ship/
-  #     solution_outbound_folder: out/solutions/
-  #     solution_source_folder: solutions/
-  #     solution_release_folder: out/release
-  #   secrets:
-  #     build_url: ${{ secrets.build_url }}
-  #     build_client_id: ${{ secrets.build_client_id }}
-  #     build_secrets_id: ${{ secrets.build_secrets_id }}
-  #     tenant_id: ${{ secrets.tenant_id }}
+  release-to-build-env:
+    strategy:
+        max-parallel: 1
+        matrix:
+          target: [EQL20Customizing]
+    needs: [ build ]
+    uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml@master
+    with:
+      solution_name: ${{ matrix.target }}
+      branch_name: solution
+      solution_shipping_folder: out/ship/
+      solution_outbound_folder: out/solutions/
+      solution_source_folder: solutions/
+      solution_release_folder: out/release
+    secrets:
+      build_url: ${{ secrets.build_url }}
+      build_client_id: ${{ secrets.build_client_id }}
+      build_secrets_id: ${{ secrets.build_secrets_id }}
+      tenant_id: ${{ secrets.tenant_id }}
   
-  # download-upload-portal-data-build-env:
-  #   needs: [ release-to-build-env ]
-  #   uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml@master
-  #   secrets:
-  #     dev_url: ${{ secrets.dev_url }}
-  #     dev_client_id: ${{ secrets.dev_client_id }}
-  #     dev_secrets_id: ${{ secrets.dev_secrets_id }}
-  #     build_url: ${{ secrets.build_url }}
-  #     build_client_id: ${{ secrets.build_client_id }}
-  #     build_secrets_id: ${{ secrets.build_secrets_id }}
-  #     tenant_id: ${{ secrets.tenant_id }}    
+  download-upload-portal-data-build-env:
+    needs: [ release-to-build-env ]
+    uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline.yml@master
+    secrets:
+      dev_url: ${{ secrets.dev_url }}
+      dev_client_id: ${{ secrets.dev_client_id }}
+      dev_secrets_id: ${{ secrets.dev_secrets_id }}
+      build_url: ${{ secrets.build_url }}
+      build_client_id: ${{ secrets.build_client_id }}
+      build_secrets_id: ${{ secrets.build_secrets_id }}
+      tenant_id: ${{ secrets.tenant_id }}    
          
-  # release-to-sit-env:
-  #   strategy:
-  #     max-parallel: 1
-  #     matrix:
-  #       target: [EQL20Customizing]
-  #   needs: [ release-to-build-env ]
-  #   uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml@master
-  #   with:
-  #     solution_name: ${{ matrix.target }}
-  #     solution_release_folder: out/release
-  #   secrets:
-  #     sit_url: ${{ secrets.sit_url }}
-  #     sit_client_id: ${{ secrets.sit_client_id }}
-  #     sit_secrets_id: ${{ secrets.sit_secrets_id }}
-  #     tenant_id: ${{ secrets.tenant_id }}
+  release-to-sit-env:
+    strategy:
+      max-parallel: 1
+      matrix:
+        target: [EQL20Customizing]
+    needs: [ release-to-build-env ]
+    uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_sit_env.yml@master
+    with:
+      solution_name: ${{ matrix.target }}
+      solution_release_folder: out/release
+    secrets:
+      sit_url: ${{ secrets.sit_url }}
+      sit_client_id: ${{ secrets.sit_client_id }}
+      sit_secrets_id: ${{ secrets.sit_secrets_id }}
+      tenant_id: ${{ secrets.tenant_id }}
     
   download-upload-portal-data-sit-env:
-      # needs: [ release-to-sit-env ]
+      needs: [ release-to-sit-env ]
       uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_download_upload_portal_data_pipeline_to_sit_env.yml@master
       secrets:
         build_url: ${{ secrets.build_url }}
@@ -88,68 +88,68 @@ jobs:
         sit_secrets_id: ${{ secrets.sit_secrets_id }}
         tenant_id: ${{ secrets.tenant_id }}  
       
-  # release-to-data-migration-env:
-  #   strategy:
-  #     max-parallel: 1
-  #     matrix:
-  #       target: [EQL20Customizing]
-  #   needs: [ release-to-build-env ]
-  #   uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_data_migration_env.yml@master
-  #   with:
-  #     solution_name: ${{ matrix.target }}
-  #     solution_release_folder: out/release
-  #   secrets:
-  #     data_migration_url: ${{ secrets.data_migration_url }}
-  #     data_migration_client_id: ${{ secrets.data_migration_client_id }}
-  #     data_migration_secrets_id: ${{ secrets.data_migration_secrets_id }}
-  #     tenant_id: ${{ secrets.tenant_id }}
+  release-to-data-migration-env:
+    strategy:
+      max-parallel: 1
+      matrix:
+        target: [EQL20Customizing]
+    needs: [ release-to-build-env ]
+    uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_data_migration_env.yml@master
+    with:
+      solution_name: ${{ matrix.target }}
+      solution_release_folder: out/release
+    secrets:
+      data_migration_url: ${{ secrets.data_migration_url }}
+      data_migration_client_id: ${{ secrets.data_migration_client_id }}
+      data_migration_secrets_id: ${{ secrets.data_migration_secrets_id }}
+      tenant_id: ${{ secrets.tenant_id }}
 
-  # release-to-uat-env:
-  #     strategy:
-  #       max-parallel: 1
-  #       matrix:
-  #         target: [EQL20Customizing]
-  #     needs: [ release-to-sit-env ]
-  #     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_uat_env.yml@master
-  #     with:
-  #       solution_name: ${{ matrix.target }}
-  #       solution_release_folder: out/release
-  #     secrets:
-  #       uat_url: ${{ secrets.uat_url }}
-  #       uat_client_id: ${{ secrets.uat_client_id }}
-  #       uat_secrets_id: ${{ secrets.uat_secrets_id }}
-  #       tenant_id: ${{ secrets.tenant_id }}
+  release-to-uat-env:
+      strategy:
+        max-parallel: 1
+        matrix:
+          target: [EQL20Customizing]
+      needs: [ release-to-sit-env ]
+      uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_uat_env.yml@master
+      with:
+        solution_name: ${{ matrix.target }}
+        solution_release_folder: out/release
+      secrets:
+        uat_url: ${{ secrets.uat_url }}
+        uat_client_id: ${{ secrets.uat_client_id }}
+        uat_secrets_id: ${{ secrets.uat_secrets_id }}
+        tenant_id: ${{ secrets.tenant_id }}
         
-  # upload-portal-data-uat-env:
-  #     needs: [ release-to-uat-env ]
-  #     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_uat_env.yml@master
-  #     secrets:
-  #       uat_url: ${{ secrets.uat_url }}
-  #       uat_client_id: ${{ secrets.uat_client_id }}
-  #       uat_secrets_id: ${{ secrets.uat_secrets_id }}
-  #       tenant_id: ${{ secrets.tenant_id }}
+  upload-portal-data-uat-env:
+      needs: [ release-to-uat-env ]
+      uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_uat_env.yml@master
+      secrets:
+        uat_url: ${{ secrets.uat_url }}
+        uat_client_id: ${{ secrets.uat_client_id }}
+        uat_secrets_id: ${{ secrets.uat_secrets_id }}
+        tenant_id: ${{ secrets.tenant_id }}
   
-  # release-to-prod-env:
-  #     strategy:
-  #       max-parallel: 1
-  #       matrix:
-  #         target: [EQL20Customizing]
-  #     needs: [ release-to-uat-env ]
-  #     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml@master
-  #     with:
-  #       solution_name: ${{ matrix.target }}
-  #       solution_release_folder: out/release
-  #     secrets:
-  #       prod_url: ${{ secrets.prod_url }}
-  #       prod_client_id: ${{ secrets.prod_client_id }}
-  #       prod_secrets_id: ${{ secrets.prod_secrets_id }}
-  #       tenant_id: ${{ secrets.tenant_id }}
+  release-to-prod-env:
+      strategy:
+        max-parallel: 1
+        matrix:
+          target: [EQL20Customizing]
+      needs: [ release-to-uat-env ]
+      uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_prod_env.yml@master
+      with:
+        solution_name: ${{ matrix.target }}
+        solution_release_folder: out/release
+      secrets:
+        prod_url: ${{ secrets.prod_url }}
+        prod_client_id: ${{ secrets.prod_client_id }}
+        prod_secrets_id: ${{ secrets.prod_secrets_id }}
+        tenant_id: ${{ secrets.tenant_id }}
 
-  # upload-portal-data-prod-env:
-  #     needs: [ release-to-prod-env ]
-  #     uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_prod_env.yml@master
-  #     secrets:
-  #       prod_url: ${{ secrets.prod_url }}
-  #       prod_client_id: ${{ secrets.prod_client_id }}
-  #       prod_secrets_id: ${{ secrets.prod_secrets_id }}
-  #       tenant_id: ${{ secrets.tenant_id }}
+  upload-portal-data-prod-env:
+      needs: [ release-to-prod-env ]
+      uses: CMX-Pipeline/eql_cmx_portal_cicd_repository_/.github/workflows/eql_cmx_portal_cicd_upload_portal_data_pipeline_to_prod_env.yml@master
+      secrets:
+        prod_url: ${{ secrets.prod_url }}
+        prod_client_id: ${{ secrets.prod_client_id }}
+        prod_secrets_id: ${{ secrets.prod_secrets_id }}
+        tenant_id: ${{ secrets.tenant_id }}
