--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
@@ -78,6 +78,11 @@ jobs:
 
     - name: Upgrade Solution Version
       uses: microsoft/powerplatform-actions/update-solution-version@v0
+      with:
+        environment-url: ${{ secrets.build_url }}
+        app-id: ${{ secrets.build_client_id }}
+        client-secret: ${{ secrets.build_secrets_id }}
+        tenant-id: ${{ secrets.tenant_id }}
 
     - name: export solution as managed from buid env
       uses: microsoft/powerplatform-actions/export-solution@v0
