--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
@@ -77,13 +77,14 @@ jobs:
         publish-changes: true
 
     - name: Update Solution Version
-      uses: microsoft/powerplatform-actions/upgrade-solution@v0
+      uses: microsoft/powerplatform-actions/update-solution-version@v0
       with:
         environment-url: ${{ secrets.build_url }}
         app-id: ${{ secrets.build_client_id }}
         client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
-        solution-name: ${{ inputs.solution_name }}
+        strategy: gittags
+        
 
     - name: export solution as managed from buid env
       uses: microsoft/powerplatform-actions/export-solution@v0
