--- a/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_release_pipeline_to_build_env.yml
@@ -84,7 +84,8 @@ jobs:
         client-secret: ${{ secrets.build_secrets_id }}
         tenant-id: ${{ secrets.tenant_id }}
         strategy: gittags
-        
+      env:
+        PacCli.PAT: ${{secrets.GITHUB_TOKEN}}
 
     - name: export solution as managed from buid env
       uses: microsoft/powerplatform-actions/export-solution@v0
