--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -83,6 +83,22 @@ jobs:
           solution-type: 'Unmanaged'
           overwrite-files: true
 
+      - name: Go to Solution File
+        run: |
+          cd ${{ inputs.solution_folder}}/${{ inputs.solution_name }}
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+
+      - name: Update Solution Version
+        uses: microsoft/powerplatform-actions/update-solution-version@v0
+        with:
+          environment-url: ${{ secrets.build_url }}
+          app-id: ${{ secrets.build_client_id }}
+          client-secret: ${{ secrets.build_secrets_id }}
+          tenant-id: ${{ secrets.tenant_id }}
+          patch-version: 1
+
       - name: branch solution
         uses: microsoft/powerplatform-actions/branch-solution@v0
         with:
