--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Go to Solution File
         run: |
-          cd ${{ inputs.solution_folder}}/${{ inputs.solution_name }}
+          cd ${{ inputs.solution_folder}}${{ inputs.solution_name }}
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
@@ -93,10 +93,6 @@ jobs:
       - name: Update Solution Version
         uses: microsoft/powerplatform-actions/update-solution-version@v0
         with:
-          environment-url: ${{ secrets.build_url }}
-          app-id: ${{ secrets.build_client_id }}
-          client-secret: ${{ secrets.build_secrets_id }}
-          tenant-id: ${{ secrets.tenant_id }}
           patch-version: 1
 
       - name: branch solution
