--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -97,7 +97,7 @@ jobs:
           app-id: ${{ secrets.dev_client_id }}
           client-secret: ${{ secrets.dev_secrets_id }}
           tenant-id: ${{ secrets.tenant_id }}
-          patch-version: 1
+          revision-version: 1
 
       - name: branch solution
         uses: microsoft/powerplatform-actions/branch-solution@v0
