Added ps script for solution version

--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -84,8 +84,15 @@ jobs:
           overwrite-files: true
 
       - name: go to solution xml file
+        shell: pwsh
         run: |
-          cd ${{ inputs.solution_folder}}${{ inputs.solution_name }}/Other
+          [xml]$XmlDocument = Get-Content -Path ${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml
+          $OldVersion = $XmlDocument.GetElementsByTagName('Version')
+          [version]$Version = $OldVersion[0].'#text' 
+          if($Version.
+          [version]$NewVersion = "{0}.{1}.{2}.{3}" -f $Version.Major, $Version.Minor, ($Version.Build + 1), $Version.Revision
+          $OldVersion[0].'#text'  = $NewVersion.ToString()
+          $XmlDocument.Save('${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml')
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
