--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -83,6 +83,18 @@ jobs:
           solution-type: 'Unmanaged'
           overwrite-files: true
 
+      - name: ipdate slution version
+        shell: pwsh
+        run: |
+          [xml]$XmlDocument = Get-Content -Path ${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml
+          $OldVersion = $XmlDocument.GetElementsByTagName('Version')
+          [version]$Version = $OldVersion[0].'#text' 
+          [version]$NewVersion = "{0}.{1}.{2}.{3}" -f $Version.Major, $Version.Minor, ($Version.Build + 1), $Version.Revision
+          $OldVersion[0].'#text'  = $NewVersion.ToString()
+          $XmlDocument.Save('${{ inputs.solution_folder}}/${{ inputs.solution_name }}/Other/Solution.xml')
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
       - name: branch solution
         uses: microsoft/powerplatform-actions/branch-solution@v0
         with:
