--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -103,7 +103,22 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           allow-empty-commit: true
           branch-name: ${{ inputs.branch_name }}-${{ inputs.solution_name }}
-    
+
+      - name: fetch develop branch
+        run: |
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git fetch --no-tags --prune --depth=1 origin
+          git checkout ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+          git pull origin develop
+          git status
+          git add .
+          git commit -m "fetch develop branch"
+          git push
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: create pull request
         run: |
           gh pr create -B develop -H ${{ inputs.branch_name }}-${{ inputs.solution_name }} --title 'Merge ${{ inputs.branch_name }} into develop' --body 'Created by Github action'
@@ -112,7 +127,7 @@ jobs:
 
       - name: merge pull requests
         run: |          
-          gh pr merge --admin --merge ${{ inputs.branch_name }}-${{ inputs.solution_name }} --disable-auto
+          gh pr merge --admin --merge ${{ inputs.branch_name }}-${{ inputs.solution_name }}
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
