--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -112,10 +112,6 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin
           git checkout ${{ inputs.branch_name }}-${{ inputs.solution_name }}
           git pull origin develop
-          git status
-          git add .
-          git commit -m "fetch develop branch"
-          git push
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -127,7 +123,7 @@ jobs:
 
       - name: merge pull requests
         run: |          
-          gh pr merge --admin --merge ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+          gh pr merge --admin --squash ${{ inputs.branch_name }}-${{ inputs.solution_name }}
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
