--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -111,7 +111,7 @@ jobs:
           git config user.email "<>"
           git fetch --no-tags --prune --depth=1 origin
           git checkout ${{ inputs.branch_name }}-${{ inputs.solution_name }}
-          git pull origin develop
+          git pull origin develop --allow-unrelated-histories
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
