Added ps script for solution version

--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: merge pull requests
         run: |          
-          gh pr merge --admin --merge ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+          gh pr merge --admin ${{ inputs.branch_name }}-${{ inputs.solution_name }}
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
