--- a/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
+++ b/.github/workflows/eql_cmx_portal_cicd_build_pipeline.yml
@@ -122,9 +122,10 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: merge pull requests
-        run: |          
-          gh pr merge --admin ${{ inputs.branch_name }}-${{ inputs.solution_name }}
+      - name: merge pull request
+        run: |
+          prnumber=$(gh pr list --head ${{ inputs.branch_name }}-${{ inputs.solution_name }})  
+          gh pr checkout $(prnumber) && git fetch origin develop && git merge origin/develop
         env:
             GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
             
